--- a/public/404/index.html
+++ b/public/404/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-<title>Cheatsheet</title>
+<title>Error</title>
 
 
 <link rel="stylesheet" href="https://mysterycultist.org/sass/main.min.css">
@@ -18,7 +18,7 @@
     </ul>
 </nav>
         
-    <p>Empty&hellip;</p>
+    <h2 id="sorry-theres-been-an-error">Sorry, There&rsquo;s Been An Error</h2>
 
 
     </body>
