--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
-    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+    <head>
         <meta charset="utf-8">
 <title>About</title>
 
 
-<link rel="stylesheet" href="http://localhost:1313/sass/main.min.css">
+<link rel="stylesheet" href="https://mysterycultist.org/sass/main.min.css">
     </head>
 
     <body>
@@ -20,9 +20,6 @@
         
     <p>Hi, I&rsquo;m the Mystery Cultist.</p>
 
-
-        
- 
 
     </body>
 </html>
