--- a/public/404.html
+++ b/public/404.html
@@ -7,6 +7,7 @@
 
 
 <link rel="stylesheet" href="https://mysterycultist.com/sass/main.min.css">
+<link rel="icon" href="/favicon.ico">
 </head>
 
 <body class="error-404">
