--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
         <meta charset="utf-8">
 <title>About</title>
 
 
 
-<link rel="stylesheet" href="https://mysterycultist.com/sass/main.min.css">
+<link rel="stylesheet" href="http://localhost:1313/sass/main.min.css">
 <link rel="icon" href="/favicon.ico">
     </head>
 
