--- a/public/404.html
+++ b/public/404.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<head>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8">
 <title>404 Page not found</title>
 
 
 
-<link rel="stylesheet" href="https://mysterycultist.com/sass/main.min.css">
-<link rel="icon" href="/favicon.ico">
+<link rel="stylesheet" href="http://localhost:1313/sass/main.min.css">
+<link rel="icon" href="/favicon.ico" />
 </head>
 
 <body class="error-404">
