--- a/public/about/index.html
+++ b/public/about/index.html
@@ -92,9 +92,23 @@ function filterPosts(query) {
     </h5>
   </header>
   <section class="markdownBody">
-    <p> </p>
-<hr>
-<p>Hi, I&rsquo;m the Mystery Cultist.</p>
+    <hr>
+<p> </p>
+<p>Greetings, reader. I hope I find you well, inquiring into my person. I hope to be of an interesting read to you, and that my exploits may aid in your own endevours in life, particularly in the field of roleplaying games.</p>
+<p>As of the 
+
+66th year of this century, I am Quintino Gonzago, a 
+
+
+
+
+
+
+
+twenty-three year old troupe leader. Younger than most running performing acts, but some interesting turns of events have led me to this path of life. Though never an impressive actor, I&rsquo;ve always had a passion for storytelling - right from my childhood I would invent stories with my parents of fantastical worlds, heroes of ages long past and tales that rival those of the old myths. The more I travel from my humble hamlet, the more strange and wonderous my own world seems.</p>
+<p>During my days, I spend much of my time writing for roleplaying games, searching for new places to perform and dabbling in the occult through various grimoires I&rsquo;ve procured.</p>
+<p>In earnest, I hope to begin this stream of letters to inform and aid those who also spent much time lost in the piles of information about roleplaying games in a stle of my preference - avoiding the need to trawl hours of lectures when all one needs is a simple checklist of session preparation notes.</p>
+<p>As much as the outside world likes to claim otherwise, the only thing you should focus on is your current play group and the effect your games have on them. No universal advice will always suit you perfectly and it is for you and your friends to decide how it affects your style of play.</p>
 
   </section>
   
