About page and about card added content.

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+    <head>
         <meta charset="utf-8">
 <title>About</title>
 
 
 
-<link rel="stylesheet" href="http://localhost:1313/sass/main.min.css">
+<link rel="stylesheet" href="https://mysterycultist.com/sass/main.min.css">
 <link rel="icon" href="/favicon.ico" />
     </head>
 
@@ -94,21 +94,27 @@ function filterPosts(query) {
   <section class="markdownBody">
     <hr>
 <p> </p>
-<p>Greetings, reader. I hope I find you well, inquiring into my person. I hope to be of an interesting read to you, and that my exploits may aid in your own endevours in life, particularly in the field of roleplaying games.</p>
-<p>As of the 
-
-66th year of this century, I am Quintino Gonzago, a 
-
-
-
-
-
-
-
-twenty-three year old troupe leader. Younger than most running performing acts, but some interesting turns of events have led me to this path of life. Though never an impressive actor, I&rsquo;ve always had a passion for storytelling - right from my childhood I would invent stories with my parents of fantastical worlds, heroes of ages long past and tales that rival those of the old myths. The more I travel from my humble hamlet, the more strange and wonderous my own world seems.</p>
-<p>During my days, I spend much of my time writing for roleplaying games, searching for new places to perform and dabbling in the occult through various grimoires I&rsquo;ve procured.</p>
-<p>In earnest, I hope to begin this stream of letters to inform and aid those who also spent much time lost in the piles of information about roleplaying games in a stle of my preference - avoiding the need to trawl hours of lectures when all one needs is a simple checklist of session preparation notes.</p>
-<p>As much as the outside world likes to claim otherwise, the only thing you should focus on is your current play group and the effect your games have on them. No universal advice will always suit you perfectly and it is for you and your friends to decide how it affects your style of play.</p>
+<p>Greetings, dear reader,</p>
+<p> </p>
+<p>I trust this finds you in good spirits and curious enough to peer behind the curtain at the humble scribe who pens these missives. It is with no small pleasure I offer this account of myself—<strong>Quintino Gonzago</strong>—a modest master of a travelling troupe, devoted to performing in the style of <em>la commedia dell’arte</em>, and an ardent practitioner of the noble pastime of roleplaying games.</p>
+<h3 id="who-am-i">Who Am I</h3>
+<p>Though I am younger than many who lead such ventures, fortune has set me upon this curious road. Although I was never gifted upon the stage myself, I have long harboured a love for storytelling—since boyhood, when I would conjure fantastical realms and valiant heroes alongside my parents, weaving tales that sought to rival the grand myths of old. The farther I journey from my modest hamlet, the more wondrous and peculiar this world of mine reveals itself to be.</p>
+<h3 id="what-i-do">What I Do</h3>
+<p>By day (and often night), I devote my energies to the writing for personal roleplaying games, the seeking of work for myself and my troupe, and the occasional scholarly flirtation with the occult, aided by a small but treasured collection of grimoires. For over 9 years, I have beckoned players into mystical realms, and I vow this crusade shall endure &rsquo;till every story has been told.</p>
+<h3 id="my-goals">My Goals</h3>
+<p>I chiefly aim to guide those who bear the mantle of gamemaster who find themselves adrift amid the endless discourse surrounding our craft, while accommodating any who are curious about my travels through the stange lands I claim as home. Herein, I shall muse upon campaign and session design, debate the eternal questions of our hobby, and offer a trove of treasures—magical items, evocative locations, and scenario ideas to make you burst with creative spirits—though personally I prefer red wine. Ultimately, I aim to forge a master compendium of knowledge and advice, a tome to guide both myself and fellow wanderers in this uncertain landscape.</p>
+<h3 id="my-history">My History</h3>
+<p>Though I spent two or so years with friends using half-baked and mis-remembered rules, my first true venture into roleplaying found me as a rogue in the realm of Dungeons &amp; Dragons 3.5e. Lost amidst a shadowed forest, my hapless character approached a cabin and met an instantaneous end upon an explosive trap—a &rsquo;landmine&rsquo;—to the bemusement of my games master. The session ended swiftly after that—the frail owner of the house transforming into a shadowy, spindly entity who chased the remaining adventurers into a fog before the session ended.</p>
+<p> <br>
+Though no heroic inauguration, the session gave structure to a passion that led me through many campaigns—mainly in Dungeons &amp; Dragons 5e—and then onwards to explorations of GURPS, Shadowdark, Call of Cthulhu, Old School Essentials, and Fate. I have gathered, sifted, and refined wisdom from many sages, ever in search of the perfect formula—though it remains as elusive as ever.</p>
+<h3 id="philosophy">Philosophy</h3>
+<p>My guiding principle is simple: let the actions of the players affect the world around them, and from this alone can tales worth carving into rock be formed.</p>
+<p> </p>
+<p>Many thanks for your kind attention. I hope you will linger a while longer in these pages.</p>
+<p> </p>
+<p>With sincere regards,</p>
+<p> </p>
+<p>Quin, the Mystery Cultist</p>
 
   </section>
   
