Write-up for some entries.

--- a/public/cheatsheet/index.html
+++ b/public/cheatsheet/index.html
@@ -95,52 +95,209 @@ function filterPosts(query) {
     <hr>
 <p> </p>
 <h3 id="overview">Overview</h3>
-<p>For those endlessly trawling advice in search of the holy grail of ideas, here is a list for your consideration.</p>
-<p>In the end, the only thing that matters is that your players felt like they were heard, and that they mattered and that they can make a difference.</p>
-<h3 id="how-does-it-fit-together">How Does It Fit Together</h3>
-<p>Your primary goal as a games master is to simulate an interesting world for your players to get to feel like their cool, silly and wildly foresightless actions mattered and made a difference in the game world.</p>
-<p>In practice, none of this is nessasary to facilitate that - but it can help to generate varied ideas to</p>
-<h2 id="combat">Combat</h2>
-<h3 id="mechanical">Mechanical</h3>
-<h4 id="action-economy">Action economy</h4>
-<p>One of the biggest balancing factors in combat.</p>
-<h4 id="initial-engagement">Initial engagement</h4>
-<h2 id="-ambush">Here are some types of combats that you could set up for your players to interact with:<br>
-&ndash; Ambush</h2>
-<h4 id="enemy-varierty">Enemy varierty</h4>
-<h4 id="damage-range">Damage range</h4>
-<h4 id="damage-type">Damage type</h4>
-<h4 id="terrain">Terrain</h4>
-<h4 id="weather">Weather</h4>
-<h4 id="phase-two">Phase two</h4>
-<h3 id="narrative">Narrative</h3>
-<h4 id="objectives">Objectives</h4>
-<h4 id="constraints">Constraints</h4>
-<h4 id="foreshadowing">Foreshadowing</h4>
-<h4 id="morale">Morale</h4>
-<p>Give players alternate ways to win. Creatures that never run should be the mindless and the foolhardy - fights become more interesting when enemies break rank and suddenly players need to decide if the chase is worth their time. It&rsquo;s fun, it makes them feel cool and it&rsquo;s the best way to re-introduce survivors as mini villains later down the line.</p>
-<h4 id="information">Information</h4>
-<h4 id="repercussions">Repercussions</h4>
-<h2 id="exploration">Exploration</h2>
-<h4 id="five-room-dungeon">Five-room dungeon</h4>
-<h4 id="hex-crawls">Hex crawls</h4>
-<h4 id="point-crawls">Point crawls</h4>
-<h4 id="dungeon-crawls">Dungeon crawls</h4>
-<h4 id="random-encounters">Random encounters</h4>
-<h4 id="room-exploration">Room exploration</h4>
+<p><em>What&rsquo;s the point in all this?</em></p>
+<p>I value player agency above all else. For players, the fun comes from making <em>interesting</em> and <em>meaningful</em> decisions that shape the game world. Mechanically, that means crafting situations that invite creative problem-solving and allow a range of approaches.</p>
+<p> </p>
+<p>This cheat sheet is a tool for building those kinds of scenarios. Use it as inspiration. For any given session, pick a few relevant features—don’t try to include everything.</p>
+<h1 id="variety-in-combat">Variety In Combat</h1>
+<h2 id="-step-1-setup-">========= Step 1: Setup =========</h2>
+<h3 id="1-foreshadowing">1. Foreshadowing</h3>
+<p>Clues give players the option to prep, avoid or exploit.</p>
+<ul>
+<li>Leave <strong>2-3 clues</strong> before danger (tracks, blood, rumours, sounds).</li>
+<li>Dungeons: signs one or two rooms ahead.</li>
+<li>Cities: gossip, strange behaviours.</li>
+<li>Travel: unnatural terrain, spooked animals, tracks.</li>
+</ul>
+<h3 id="2-objectives">2. Objectives</h3>
+<p>Give players reasons beyond “kill or be killed.”</p>
+<ul>
+<li>Defend, retrieve, escape, delay, disrupt.</li>
+<li>Layer motives: protect one target, defeat another, steal a third.</li>
+<li>Use familiar tropes—they work.</li>
+</ul>
+<h3 id="3-constraints">3. Constraints</h3>
+<p>Restrict easy options to encorage options.</p>
+<ul>
+<li>Time pressure, alarms, hostages, fragile terrain.</li>
+<li>Push players to adapt, be creative or accept consequences.</li>
+</ul>
+<h3 id="4-engagement-state">4. Engagement State</h3>
+<p>Decide how alert enemies are—or let player actions shape it.</p>
+<ul>
+<li>On-Guard: Ready for a fight, no surprise.</li>
+<li>Looking for Trouble: Ambushes, traps, alert systems.</li>
+<li>Oblivious: Players control the approach.</li>
+</ul>
+<h3 id="5-first-contact">5. First Contact</h3>
+<p>Decide which monsters you&rsquo;ll predetermine responses for and which you&rsquo;ll roll for.</p>
+<ul>
+<li>Offers chances for diplomacy, confusion, or panic.</li>
+<li>Rolling boosts unpredictability and presents unexpected situations.</li>
+</ul>
+<p> </p>
+<p><em>Reaction Roll (2d6 + CHA modifier):</em></p>
+<table>
+  <thead>
+      <tr>
+          <th>Result</th>
+          <th>Reaction</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td>6-</td>
+          <td>Hostile</td>
+      </tr>
+      <tr>
+          <td>7-8</td>
+          <td>Suspicious</td>
+      </tr>
+      <tr>
+          <td>9</td>
+          <td>Neutral</td>
+      </tr>
+      <tr>
+          <td>10-11</td>
+          <td>Curious</td>
+      </tr>
+      <tr>
+          <td>12+</td>
+          <td>Friendly</td>
+      </tr>
+  </tbody>
+</table>
+<h2 id="-step-2-battle-">========= Step 2: Battle =========</h2>
+<h3 id="1-battle-type">1. Battle Type</h3>
+<p>Vary group structure to shift tone and pacing.</p>
+<ul>
+<li>Balanced: 1:1 ratio of foes to players.</li>
+<li>Horde: Swarms of weaker enemies.</li>
+<li>Elite: Fewer foes, strong and specialized.</li>
+<li>Boss: One main threat + backup. (Solo fights reduce player options.)</li>
+</ul>
+<h3 id="2-enemy-variety">2. Enemy Variety</h3>
+<p>Enhance with archetypal enemies to warp the battlefield. Choose either a mixture, multiple of one type or a single powerful one alongside generic minions.</p>
+<ul>
+<li>Spellcasters: Healers, Areas of Effect, Buffs or Debuffs</li>
+<li>Ranged: Use cover, snipers, make distance</li>
+<li>Melee: Tanks, chargers, assassins</li>
+<li>Minions: Weak, numerous, expendable</li>
+<li>Pets: Mounts, beasts, siege creatures</li>
+</ul>
+<h3 id="3-damage-type">3. Damage Type</h3>
+<p>Alternate forms of harm.</p>
+<ul>
+<li>HP loss</li>
+<li>Stat drains</li>
+<li>Status effects</li>
+<li>Equipment damage</li>
+<li>Level drain</li>
+<li>Emotional (lies, threats, painful reveals)</li>
+<li>Curses or lingering effects (poisons, exhaustion)</li>
+</ul>
+<h3 id="4-battlefield-terrain">4. Battlefield Terrain</h3>
+<p>Use terrain to vary decisions and encorage creative tactics.<br>
+&ndash; Changes in verticality (strongly reccomended, remember to have enemies use them)<br>
+&ndash; Cover and concealment<br>
+&ndash; Difficult terrain<br>
+&ndash; Obstacles and hazards<br>
+&ndash; Weather, temperature and light<br>
+&ndash; Magical or weird conditions (spore clouds, acid storm)</p>
+<h3 id="5-phase-two">5. Phase two</h3>
+<p>Mid-fight twists break routine and demand adaptation.</p>
+<ul>
+<li>Reinforcements arrive</li>
+<li>Enemy transforms</li>
+<li>Tactics shift—new objective, trap sprung, battlefield changes</li>
+</ul>
+<h3 id="6-morale">6. Morale</h3>
+<p>Skip tedious cleanup with morale checks.</p>
+<ul>
+<li>Foes might flee, surrender, or regroup</li>
+<li>Creates recurring NPCs and lingering consequences</li>
+</ul>
+<h2 id="-step-3-resolution-">========= Step 3: Resolution =========</h2>
+<h3 id="1-rewards">1. Rewards</h3>
+<p>Reward playstyle, not just victory.</p>
+<ul>
+<li>XP</li>
+<li>Money: Gold, gems, paintings, statues.</li>
+<li>Loot: personal, cursed, unique, or useful.</li>
+<li>Tools: gear, NPC allies, vehicles, safehouses.</li>
+<li>Access: keys, maps, passwords, faction respect.</li>
+<li>Intangible gains: fearsome reputation, favour owed, new complications.</li>
+<li>Information: mystery items or clues, lore.</li>
+</ul>
+<h3 id="2-repercussions">2. Repercussions</h3>
+<p>Show the world reacting to player choices.</p>
+<ul>
+<li>Survivors may regroup, spread tales, or swear revenge.</li>
+<li>Destroyed areas cause fear, instability, or shifts in power.</li>
+<li>Allies or factions may disapprove, reward, or exploit outcomes.</li>
+<li>Missed objectives (hostages lost, alarms raised) return visible results.</li>
+</ul>
+<h1 id="exploration">Exploration</h1>
+<h3 id="five-room-dungeon">Five-room dungeon</h3>
+<p>A compact story structure that supports tension and escalation—they do not need to be literally five rooms.</p>
+<ol>
+<li>Entrance + Guardian – A minor challenge or mystery.</li>
+<li>Puzzle or Roleplay – Forces thought or interaction.</li>
+<li>Setback or Twist – Ambush, betrayal, environmental hazard.</li>
+<li>Climax or Major Threat – The final fight, choice, or conflict.</li>
+<li>Reward or Revelation – Loot, truth, or a new hook.</li>
+</ol>
+<h3 id="hex-crawls">Hex crawls</h3>
+<p>Focus on traversal and discovery.</p>
+<ul>
+<li>Focus on a small area at first: 3 mile hexes, 20x16.</li>
+<li>Players should be able to see into ajacent hexes so they have agency to make meaningful choices.</li>
+<li>Choose hexes with points of interest: danger, mystery, encounter, or reward.</li>
+<li>Add landmarks: places seen from afar but take time to reach.</li>
+<li>Track supplies and create varied travel conditions.</li>
+</ul>
+<h3 id="point-crawls">Point crawls</h3>
+<p>Abstract movement through a map of connected locations.</p>
+<ul>
+<li>Each node is a place or event; each path offers risk/reward tradeoffs.</li>
+<li>Use when the events are more important than the journey.</li>
+<li>Emphasises meaningful routes over granular movement.</li>
+</ul>
+<h3 id="dungeon-crawls">Dungeon crawls</h3>
+<p>Create tension with scarcity and danger.</p>
+<ul>
+<li>Emphasise resource management: light, HP, spells, time.</li>
+<li>Use clear signs of threat to let players plan.</li>
+<li>Create forks and loopbacks to allow intelligent pathing.</li>
+</ul>
+<h3 id="random-encounters">Random encounters</h3>
+<p>Turn travel into gameplay, not filler.</p>
+<ul>
+<li>Build tables that include encounters and atmospheric entries.</li>
+<li>Tie entries to location themes and foreshadowing.</li>
+<li>Use encounters to shift momentum, not to pad time.</li>
+</ul>
+<h3 id="room-exploration">Room exploration</h3>
+<ul>
+<li>Detail 1–3 notable features that draw the eye and details for when players interact with them.</li>
+<li>Use sensory cues (smell, sound, temperature).</li>
+<li>Add scenic rooms for change of pace.</li>
+<li>Include interactive elements—levers, books, puzzles, bones, odd symbols.</li>
+</ul>
 <h2 id="roleplay">Roleplay</h2>
-<h4 id="reaction-rolls">Reaction rolls</h4>
-<h4 id="first-and-third-person-dialogue">First and third person dialogue</h4>
-<h4 id="characters-who-like-the-party">Characters who like the party</h4>
+<h3 id="reaction-rolls">Reaction rolls</h3>
+<h3 id="first-and-third-person-dialogue">First and third person dialogue</h3>
+<h3 id="characters-who-like-the-party">Characters who like the party</h3>
 <p>A critical element for campaigns where the party play as heroes. The tangible effects of their good actions leading to genuine joy and happiness around them. And the reverse for evil campaigns - old mothers crying at the feet of the players for what they did to her son for the players to backhand away, cackling to themselves about their atrocities.</p>
-<h2 id="situations">Situations</h2>
-<p>The workload for a situation can be as extensive or minimal as you feel is worthwhile. But here are simple steps for an interesting session.</p>
+<h1 id="situations">Situations</h1>
+<p>To bring all of the above together, craft a situation using the following. The workload for a situation can be as extensive or minimal as you feel is worthwhile. But here are simple steps for an interesting session.</p>
 <ol>
 <li>Create <strong>three or four characters, representing larger factions</strong> - though not nessasarily their leaders.</li>
 <li>Build a <strong>conflict between them</strong> (or their underlings/families/friends). Draw from media, tropes, clichés and random tables for inspiration.</li>
 <li>Set a time for the conflict - are the players finding the aftermath of the issue, appear during the height of the action or turn up just as it&rsquo;s about to start?</li>
 <li><strong>Add a twist</strong> or foreshadowing. Bring in a secret, additional faction, hide a secret motive or loyalty of an existing faction or lay the groundwork for a future plot with a mysterious item that nobody (even you, potentially) knows how it&rsquo;s connected to the conflict.</li>
 </ol>
+<p>Use your situation to build a handful of locations, filled with encounters and choose a quest hook and that&rsquo;s one whole of an adventure done. If players ignore it, decide how the problem escalates from there (or have another group deal with it and reap the rewards) and if they follow up on it, ensure that it leads to something else.</p>
 <p> </p>
 <p>For example. Betty is a villager, Gregor a bandit and Graww is a bear. Gregor has been hunting Graww&rsquo;s family, so Graww has been attacking nearby humanoids and has recently injured Betty&rsquo;s husband who is now lost in the woods. The twist is that Gregor&rsquo;s boss has been hired by the local lord&rsquo;s political rival and is attempting to sow discord into their lands.</p>
 <p> </p>
