Changed about text.

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+    <head>
         <meta charset="utf-8">
 <title>About</title>
 
 
 
-<link rel="stylesheet" href="http://localhost:1313/sass/main.min.css">
+<link rel="stylesheet" href="https://mysterycultist.com/sass/main.min.css">
 <link rel="icon" href="/favicon.ico" />
     </head>
 
@@ -94,6 +94,7 @@ function filterPosts(query) {
   <section class="markdownBody">
     <hr>
 <p> </p>
+<h1 id="placeholder-text-unfinished">Placeholder text, unfinished</h1>
 <p>Greetings, dear reader,</p>
 <p> </p>
 <p>I trust this finds you in good spirits and curious enough to peer behind the curtain at the humble scribe who pens these missives. It is with no small pleasure I offer this account of myself—<strong>Quintino Gonzago</strong>—a modest master of a travelling troupe, devoted to performing in the style of <em>la commedia dell’arte</em>, and an ardent practitioner of the noble pastime of roleplaying games.</p>
