--- a/public/cheatsheet/index.html
+++ b/public/cheatsheet/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+    <head>
         <meta charset="utf-8">
 <title>Game Master Cheatsheet</title>
 
 
 
-<link rel="stylesheet" href="http://localhost:1313/sass/main.min.css">
+<link rel="stylesheet" href="https://mysterycultist.com/sass/main.min.css">
 <link rel="icon" href="/favicon.ico" />
     </head>
 
@@ -94,6 +94,7 @@ function filterPosts(query) {
   <section class="markdownBody">
     <hr>
 <p> </p>
+<h1 id="placeholder-text-unfinished">Placeholder text, unfinished</h1>
 <h3 id="overview">Overview</h3>
 <p><em>What&rsquo;s the point in all this?</em></p>
 <p>I value player agency above all else. For players, the fun comes from making <em>interesting</em> and <em>meaningful</em> decisions that shape the game world. Mechanically, that means crafting situations that invite creative problem-solving and allow a range of approaches.</p>
@@ -283,6 +284,7 @@ function filterPosts(query) {
 <li>Use sensory cues (smell, sound, temperature).</li>
 <li>Add scenic rooms for change of pace.</li>
 <li>Include interactive elements—levers, books, puzzles, bones, odd symbols.</li>
+<li>Choices should never be arbritary—doors should always have hints to what they lead to.</li>
 </ul>
 <h2 id="roleplay">Roleplay</h2>
 <h3 id="reaction-rolls">Reaction rolls</h3>
