Deploy public folder to gh-pages

--- a/about/index.html
+++ b/about/index.html
@@ -94,9 +94,10 @@ function filterPosts(query) {
   <section class="markdownBody">
     <hr>
 <p> </p>
+<h1 id="placeholder-text-unfinished">Placeholder text, unfinished</h1>
 <p>Greetings, dear reader,</p>
 <p> </p>
-<p>I trust this finds you in good spirits and curious enough to peer behind the curtain at the humble scribe who pens these missives. It is with no small pleasure I offer this account of myself—<strong>Quintino Gonzago</strong>—a modest master of a travelling troupe, devoted to performing in the style of <em>la commedia dell’arte</em>, and an ardent practitioner of the noble pastime of roleplaying games.</p>
+<p>I trust this finds you in good spirits and inquisitive enough to peer behind the curtain at the humble scribe who pens these missives. It is with no small pleasure I offer this account of myself—<strong>Quintino Gonzago</strong>—a modest master of a travelling troupe, devoted to performing in the style of <em>la commedia dell’arte</em>, and an ardent practitioner of the noble pastime of roleplaying games.</p>
 <h3 id="who-am-i">Who Am I</h3>
 <p>Though I am younger than many who lead such ventures, fortune has set me upon this curious road. Although I was never gifted upon the stage myself, I have long harboured a love for storytelling—since boyhood, when I would conjure fantastical realms and valiant heroes alongside my parents, weaving tales that sought to rival the grand myths of old. The farther I journey from my modest hamlet, the more wondrous and peculiar this world of mine reveals itself to be.</p>
 <h3 id="what-i-do">What I Do</h3>
